--- a/Server/package.json
+++ b/Server/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "abbrev": "^1.1.1",
     "anymatch": "^3.1.3",
+    "axios": "^1.6.6",
     "balanced-match": "^1.0.2",
     "binary-extensions": "^2.2.0",
     "brace-expansion": "^1.1.11",
@@ -41,7 +42,6 @@
     "undefsafe": "^2.0.5",
     "yallist": "^4.0.0"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon ./src/index.js"
