--- a/Server/package.json
+++ b/Server/package.json
@@ -28,6 +28,7 @@
     "is-number": "^7.0.0",
     "lru-cache": "^6.0.0",
     "minimatch": "^3.1.2",
+    "morgan": "^1.10.0",
     "ms": "^2.1.2",
     "nodemon": "^3.0.3",
     "nopt": "^1.0.10",
