--- a/Server/package.json
+++ b/Server/package.json
@@ -17,6 +17,7 @@
     "chokidar": "^3.5.3",
     "concat-map": "^0.0.1",
     "debug": "^4.3.4",
+    "dotenv": "^16.4.2",
     "express": "^4.18.2",
     "fill-range": "^7.0.1",
     "glob-parent": "^5.1.2",
@@ -33,10 +34,12 @@
     "nodemon": "^3.0.3",
     "nopt": "^1.0.10",
     "normalize-path": "^3.0.0",
+    "pg": "^8.11.3",
     "picomatch": "^2.3.1",
     "pstree.remy": "^1.1.8",
     "readdirp": "^3.6.0",
     "semver": "^7.5.4",
+    "sequelize": "^6.37.0",
     "simple-update-notifier": "^2.0.0",
     "supports-color": "^5.5.0",
     "to-regex-range": "^5.0.1",
